# hackshell

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
examples/: async.rs  basic.rs  counter.rs  fork.rs  helloworld.rs  printsecret.rs  runtask.rs  runtask_blocking.rs
src/: error.rs  lib.rs  main.rs  readline.rs  taskpool.rs
src/commands/: env.rs  exit.rs  get.rs  help.rs  mod.rs  set.rs  sleep.rs  task.rs  unset.rs
src/examples/: basic.rs  counter.rs  helloworld.rs  printsecret.rs  runtask.rs
tests/: async_commands.rs  fork.rs  taskpool.rs
