[package]
name = "hackshell"
version = "0.2.0"
authors = ["Francesco Pompo' <f@francesco.cc>"]
description = "Lightweight, customizable shell framework"
repository = "https://github.com/deade1e/hackshell"
license = "MIT"
edition = "2024"

[dependencies]
chrono = "0.4.40"
shlex = "1.3.0"
clap = { version = "4.5.37", features = ["derive"] }
rustyline = "17.0.1"
