[package]
name = "hackshell"
version = "0.3.5"
authors = ["Francesco Pompo' <f@francesco.cc>"]
description = "Lightweight, customizable shell framework"
repository = "https://github.com/deade1e/hackshell"
license = "MIT"
edition = "2024"

[dependencies]
chrono = "0.4.40"
shlex = "1.3.0"
clap = { version = "4.5.37", features = ["derive"] }
rustyline = "17.0.1"
tokio = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros"] }

[features]
default = []
async = ["tokio/rt-multi-thread"]

[[example]]
name = "async"
required-features = ["async"]
